<resources>
    <string name="app_name">truefriends</string>
    <string name="team_1" />
    <string name="team_2" />
    <string name="match_history" />
    <string name="new_game">New Game</string>
    <string name="Match_History">Match History</string>
    <string name="eam_1">Τeam 1</string>
    <string name="eam_2">Τeam 2</string>
    <string name="teamm_1">Τeam 1</string>
    <string name="teamm_2">Team 2</string>
    <string name="enter_team_name">Enter team name</string>
    <string name="dates">TODO</string>
    <string name="hoppesndreams">TODO</string>
    <string name="gossip">TODO</string>
    <string name="binary">TODO</string>
    <string name="top5">TODO</string>
    <string name="names">TODO</string>
    <string name="ancienthistory">TODO</string>
    <string name="hobbies">TODO</string>
    <string name="truefriends">TODO</string>
    <string name="rules">Rules</string>
    <string name="logo_image">Logo image</string>
    <string name="team_name">Team name</string>
    <string name="right">Right</string>
    <string name="question">Question</string>
    <string name="cancel">Cancel</string>
    <string name="wrong">Wrong</string>
    <string name="home">Home</string>
    <string name="play_again">Play Again</string>
    <string name="game_over">Game over!</string>
    <string name="results">Results!</string>
    <string name="here_are_the_rules_of_the_game">Here are the rules of the game...</string>
    <string name="back">Back</string>
    <string name="game_description">Game description</string>
    <string name="difficulty">Difficulty</string>
    <string name="team_b_12">Team B: 12</string>
</resources>