<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0e2763"
    tools:context=".Third">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="113dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="68dp"
        android:contentDescription="@string/dates"
        android:scaleType="centerInside"
        android:onClick="showQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dall_e_2024_05_19_20_39_00___create_a_playful_and_colorful_logo_for_the_category__dates__for_a_friendship_themed_quiz_game__the_logo_should_feature_a_calendar_or_historical_dates_" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="113dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/hoppesndreams"
        android:scaleType="centerInside"
        android:onClick="showQuestion"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/dall_e_2024_05_19_20_39_07___create_a_playful_and_colorful_logo_for_the_category__hopes_and_dreams__for_a_friendship_themed_quiz_game__the_logo_should_feature_clouds__stars__or_a_" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="113dp"
        android:layout_height="100dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/gossip"
        android:scaleType="centerInside"
        android:onClick="showQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/dall_e_2024_05_19_20_39_10___create_a_playful_and_colorful_logo_for_the_category__gossip__for_a_friendship_themed_quiz_game__the_logo_should_feature_speech_bubbles_or_gossip_icons" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="113dp"
        android:layout_height="100dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/binary"
        android:scaleType="centerInside"
        android:onClick="showQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/dall_e_2024_05_19_20_39_13___create_a_playful_and_colorful_logo_for_the_category__yes_or_no__for_a_friendship_themed_quiz_game__the_logo_should_feature_a_checkmark_and_a_cross__be" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="113dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/top5"
        android:scaleType="centerInside"
        android:onClick="showQuestion"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dall_e_2024_05_19_20_39_15___create_a_playful_and_colorful_logo_for_the_category__top_5__for_a_friendship_themed_quiz_game__the_logo_should_feature_a_trophy_or_top_list__be_vibran" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="113dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="184dp"
        android:contentDescription="@string/names"
        android:scaleType="centerInside"
        android:onClick="showQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/names"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="113dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/ancienthistory"
        android:scaleType="centerInside"
        android:onClick="showQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dall_e_2024_05_19_20_39_22___create_a_playful_and_colorful_logo_for_the_category__ancient_history__for_a_friendship_themed_quiz_game__the_logo_should_feature_ancient_artifacts_or_" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="113dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="416dp"
        android:contentDescription="@string/hobbies"
        android:scaleType="centerInside"
        android:onClick="showQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hobbies" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="113dp"
        android:layout_height="100dp"
        android:layout_marginTop="540dp"
        android:contentDescription="@string/truefriends"
        android:scaleType="centerInside"
        android:onClick="showQuestion"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dall_e_2024_05_19_20_39_18___create_a_playful_and_colorful_logo_for_the_category__true_friend__for_a_friendship_themed_quiz_game__the_logo_should_feature_two_friends_hugging_or_a_"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="149dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="Cancel"
        android:onClick="cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
