<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#011250"
    android:backgroundTint="#011250"
    tools:context=".ResultPage">

    <TextView
        android:id="@+id/textViewResults"
        android:layout_width="312dp"
        android:layout_height="210dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="45dp"
        android:text="@string/results"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#EA9090"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="51dp"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="#C2C6C6"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="74dp"
        android:text="@string/home"
        android:onClick="goBackToMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResults" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="20dp"
        android:text="@string/play_again"
        android:onClick="goToSecond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton" />
</androidx.constraintlayout.widget.ConstraintLayout>